<resources>
    <string name="app_name">ARECS  Kasimkota</string>
    <string name="start_transaction">Start</string>
    <string name="developed_by">Designed &amp; Developed by</string>
    <string name="transaction">Process is going on......</string>
    <string name="Amount">Amount</string>
    <string name="admob_publisher_id" translatable="false">ca-app-pub-1013900452874783~5405394873</string>
    <string name="admob_banner" translatable="false">ca-app-pub-1013900452874783/5022251495</string>
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="loading_txt">Loading...</string>
    <string name="ref_one">Bills or Taxes once paid through the payment gateway shall not be refunded other than in the following circumstances:</string>
    <string name="ref_two">1. Multiple times debiting of Consumer Card/Bank Account due to technical error excluding Payment Gateway charges would be refunded to the consumer within 1 week after submitting complaint form.</string>
    <string name="ref_three">2. Consumers account being debited with excess amount in a single transaction due to technical error will be deducted in next month transaction.</string>
    <string name="ref_four">3. Due to technical error, payment being charged on the Consumer’s Card/Bank Account but the Bill is unsuccessful. However, if in such cases, consumer wishes to seek refund of the amount, he/she would be refunded net the amount, after deduction of Payment Gateway charges or any other charges within 1 week after submitting complaint form</string>
    <string name="ref_five">In case of any queries, please call anyEMI Online Services Pvt Ltd Helpdesk on +918008612200/5500 or write to helpdesk@anyemi.com</string>
    <string name="refund" formatted="false">Refund &amp; Cancellation</string>
    <string name="terms" formatted="false">Terms &amp; Conditions</string>
    <string name="cancel">test</string>
    <string name="feedback">FeedBack </string>
    <string name="info_txt">You will receive a collect request from anyEMI</string>
    <string name="condition_dialog">1) For broken transactions(i.e payment receipt is not generated), the payment data will be updated in database after getting confirmation from bank(i.e two working days). The updated transaction details can be checked by clicking on the PAYMENT-HISTORY tab.
    \n2) Late payment charges will be added in the subsequesnt bill for the payments made after the due date
    \n3) Service tax and other Government levies applicable on Transaction fee would be charged extra.</string>
    <string name="set_logo">Set logo</string>
    <string name="action_clear_device">Clear device</string>
    <string name="action_connect_device">Connect Device</string>
    <string name="action_unpair_device">Unpair Device</string>
    <string name="choose_a_picture">Choose a picture to set as logo</string>
    <string name="choose_gallery">Choose pic from Gallery</string>
    <string name="choose_camera">Capture pic from Camera</string>
    <string name="as_is_preview">Photo Preview</string>
    <string name="printer_preview">Print Preview</string>
    <string name="adjust_contrast">Adjust Contrast</string>
    <string name="empty">empty</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="logo_size">Logo size: </string>
    <string name="maintain_aspect_ratio">Maintain Aspect Ratio</string>
    <string name="invert_bitmap">Invert Image</string>
    <string name="contrast_threshold">Contrast Threshold</string>
    <string name="img_capture_cancelled">Image capture cancelled.</string>
    <string name="img_capture_failed">Image capture failed</string>
    <string name="img_too_small">Image too small, please choose a bigger one.</string>
    <string name="Rs">\u20B9</string>
    <string-array name="payment_names">
        <item>All</item>
        <item>*99#</item>
        <item>Aadhar Pay</item>
        <item>Bharat QR</item>
        <item>BHIM</item>
        <item>Cash</item>
        <item>Credit Card</item>
        <item>Cheque</item>
        <item>Debit Card</item>
        <item>Jio Money</item>
        <item>Net Banking</item>
        <item>Paytm</item>
        <item>PhonePe</item>
        <item>Paytm QR</item>
        <item>SBI UPI</item>
        <item>PayUMoney</item>
        <item>FreeCharge</item>
        <item>Airtel Money</item>
        <item>M-Pesa</item>
    </string-array>
    <string-array name="payment_ids">
        <item></item>
        <item>*99#</item>
        <item>AADHAR</item>
        <item>BQ</item>
        <item>BHIM</item>
        <item>C</item>
        <item>CC</item>
        <item>CQ</item>
        <item>DC</item>
        <item>Jio</item>
        <item>NB</item>
        <item>Paytm</item>
        <item>PhonePe</item>
        <item>PQ</item>
        <item>SBIUPI</item>
        <item>PayU</item>
        <item>FC</item>
        <item>Airtel</item>
        <item>M-Pesa</item>
    </string-array>
    <string-array name="area_array">
        <item>Select Area</item>
        <item>Yelamanchili</item>
        <item>Narsipatnam</item>
    </string-array>
    <string-array name="ary_login_type">
        <item>Select Taxes/Bills</item>
        <item>CDMA Taxes/Bills</item>
        <item>GVMC Taxes/Bills</item>
        <item>APEPDCL Power Bills</item>
        <item>RECS Bills</item>
    </string-array>
    <string-array name="area_id_array">
        <item>0</item>
        <item>1137</item>
        <item>1136</item>

    </string-array>
    <string-array name="tax_type_array">
        <item>Select Taxes/Bills</item>
        <item>Property Tax</item>
        <item>Water Tax</item>
        <item>Semi Bulk</item>
        
        

    </string-array>
    <string-array name="ero_names">
        <item>Select Ero</item>
        <item>KASIMKOTA</item>
        <item>MUNAGAPAKA</item>
        <item>SABBAVARAM-I</item>
        <item>THUMMAPALA</item>
        <item>THALLAPALEM</item>
        <item>LANKELAPALEM</item>
        <item>AGANAMPUDI</item>
        <item>PARAWADA</item>
        <item>HVC</item>
        <item>SABBAVARAM-II</item>
        <item>KOTTURU</item>
    </string-array>
    <string-array name="ero_ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>33</item>
        <item>11</item>
    </string-array>
    <string-array name="bank_names">
        <item>Select Bank</item>

    </string-array>
    <string-array name="branch_names">
        <item>Select Branch</item>

    </string-array>
    <string-array name="tax_id_array">
        <item>0</item>
        <item>HT</item>
        <item>TAP</item>
        <item>BSB</item>
        <item>DN</item>
        <item>DNP</item>

    </string-array>
    <string-array name="issue_type_array">
        <item>Select Issue Type</item>
        <item>Payment</item>
        <item>Meter Reading</item>
        <item>Supplier</item>
    </string-array>
    <string name="waiting_for_card">Please insert or swipe card now.</string>
    <string name="no_card_detected">No card detected. Please insert or swipe card again and press check card.</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Please use mag card</string>
    <string name="pin_entered">PIN entered</string>
    <string name="pin_bypassed">pin bypassed</string>
    <string name="pin_canceled">PIN canceled</string>
    <string name="pin_timeout">PIN timeout</string>
    <string name="key_error">Key error</string>
    <string name="pin_wrong_pin_length">Pin wrong length</string>
    <string name="nfc_waiting_for_card">waiting for card</string>
    <string name="nfc_waiting_for_card_removal">waiting for card removal</string>
    <string name="nfc_card_removed">card removed</string>
    <string name="nfc_timeout">timeout</string>
    <string name="nfc_card_not_supported">card not supported</string>
    <string name="nfc_multiple_card_detected">multiple card detected</string>
    <string name="nfc_card_detected">card detected</string>
    <string name="no_pin">No PIN</string>
    <string name="bad_swipe">Bad Swipe. Please swipe again.</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="mag_head_fail">Magnetic head fail</string>
    <string name="card_no_response">Check card no response</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="nfc_track2">Card Tapped (Track 2 Emulation):\n</string>
    <string name="use_icc_card">Please use ICC card</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="pin_ksn">PIN KSN:</string>
    <string name="track_ksn">Track KSN:</string>
    <string name="emv_ksn">EMV KSN:</string>
    <string name="uid">UID:</string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="card_data">Card Data: </string>
    <string name="start_emv_fail">Start EMV failed</string>
    <string name="start_emv_success">Start EMV success</string>
    <string name="app_version">App Version: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery Level: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="emioptionselectionfragment_emi_tenure">emi tenure</string>
    <string name="emioptionselectionfragment_bank_interest_rate">bank interest rate</string>
    <string name="emioptionselectionfragment_total_payable_amount">total payable amt</string>
    <string name="emioptionselectionfragment_cash_back_rate">cash back rate</string>
    <string name="emioptionselectionfragment_cash_back_amt">cash back amt</string>
    <string name="deviceinfo_view_emv_ksn">emv ksn:</string>
    <string name="deviceinfo_view_track_ksn">track ksn:</string>
    <string name="deviceinfo_view_battery_level">battery level: </string>
    <string name="deviceinfo_view_firm_ware">firmware version: </string>
    <string name="deviceinfo_view_connecting_device">connecting device</string>
</resources>