<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".CaptureImage" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/btnFromGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_gallery" />

            <Button
                android:id="@+id/btnCapturePicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_camera" />
        </LinearLayout>

        <View style="@style/Divider" />

        <TableRow
            android:id="@+id/tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/as_is_preview" />

                <ImageView
                    android:id="@+id/imgPreviewAsIs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/as_is_preview"
                    android:gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/placeholder" />

                <TextView
                    android:id="@+id/tvAsIsSize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/empty" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/printer_preview" />

                <ImageView
                    android:id="@+id/imgPreviewBiTonal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/printer_preview"
                    android:gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/placeholder" />

                <TextView
                    android:id="@+id/tvPrintSize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/empty" />
            </LinearLayout>
        </TableRow>

        <View style="@style/Divider" />

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/ll_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="7dp" >

                <LinearLayout
                    android:id="@+id/ll_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/logo_size" />

                    <TextView
                        android:id="@+id/tvlogoSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/empty" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cbInvertBitmap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/invert_bitmap" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/adjust_contrast" />
            </LinearLayout>
        </TableRow>

        <Button
            android:id="@+id/btnSetlogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="@string/set_logo" />
    </LinearLayout>

</ScrollView>