<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include
        android:id="@+id/topbar"
        layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_below_small">

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextViewRegular
                android:id="@+id/deviceinfo_LBL_emv_ksn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_normal"
                android:text="@string/deviceinfo_view_emv_ksn"
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_small" />

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextView
                android:id="@+id/deviceinfo_TXT_emv_ksn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/deviceinfo_LBL_emv_ksn"
                android:gravity="right"
                android:text=""
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_small" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_below_small">

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextViewRegular
                android:id="@+id/deviceinfo_LBL_track_ksn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_normal"
                android:text="@string/deviceinfo_view_track_ksn"
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_small" />

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextView
                android:id="@+id/deviceinfo_TXT_track_ksn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/deviceinfo_LBL_track_ksn"
                android:gravity="right"
                android:text=""
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_small" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_below_small">

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextViewRegular
                android:id="@+id/deviceinfo_LBL_firmware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_normal"
                android:text="@string/deviceinfo_view_firm_ware"
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_small" />

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextView
                android:id="@+id/deviceinfo_TXT_firmware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/deviceinfo_LBL_battery_level"
                android:gravity="right"
                android:text=""
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_small" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_below_small">

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextViewRegular
                android:id="@+id/deviceinfo_LBL_battery_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_normal"
                android:text="@string/deviceinfo_view_battery_level"
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_small" />

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextView
                android:id="@+id/deviceinfo_TXT_battery_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/deviceinfo_LBL_battery_level"
                android:gravity="right"
                android:text=""
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_small" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large">

            <com.mswipetech.wisepos.demo.sdk.customviews.CustomTextViewRegular
                android:id="@+id/deviceinfo_TXT_progress_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/deviceinfo_view_connecting_device"
                android:textColor="@color/grey"
                android:textSize="@dimen/label_font_medium" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>